# ipyflex

./: .coveragerc  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTION.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  codecov.yml  install.json  ipyflex.json  package-lock.json  package.json  pyproject.toml  pytest.ini  setup.cfg  setup.py  tsconfig.json  webpack.config.js
.binder/: environment.yml  postBuild
.github/workflows/: build.yml  check-release.yml  check_release.yaml  publish-release.yml  ui-tests.yml  update_galata_references.yaml
css/: application.css  buttons.css  widget.css
docs/: Makefile  environment.yml  make.bat
docs/source/: conf.py  develop-install.rst  index.rst  installing.rst  usage.rst
docs/source/examples/: 3d.nblink  factory.nblink  index.rst  quickstart.nblink  simple.nblink  stock.nblinkx
examples/: introduction.ipynb
examples/3d/: 3d.ipynb  3d.json
examples/quickstart/: quickstart.ipynb  quickstart.json
examples/simple/: simple.ipynb  simple.json
examples/stocks/: stock.ipynb  stock.json
examples/widget_factory/: widget_factory.ipynb  widget_factory.json
examples/withipyvuetify/: vue_example.json  withipyvuetify.ipynb
ipyflex/: __init__.py  _frontend.py  _version.py  flex_layout.py  utils.py
ipyflex/nbextension/: extension.js
ipyflex/tests/: conftest.py  test_example.py  test_nbextension_path.py
lite/: environment.yml
src/: defaultModelFactory.ts  dialogWidget.tsx  extension.ts  headerComponent.tsx  icons.tsx  index.ts  menuWidget.tsx  plugin.ts  reactWidget.tsx  utils.tsx  widget.ts  widget.tsx  widgetMenu.tsx  widgetWrapper.tsx
style/: application.css  base.css  buttons.css  widget.css
ui-tests/: package.json  playwright.config.js
ui-tests/notebooks/: CustomHeader.ipynb  CustomStyle.ipynb  DashboardWithHeader.ipynb  EmptyDashboard.ipynb  MultipleSections.ipynb  PlaceholderWidgets.ipynb  WithWidgets.ipynb  WithWidgetsFactory.ipynb  multiplesections.json  placeholderwidgets.json  withwidgetfactory.json  withwidgets.json
ui-tests/tests/: ipyflex.test.ts
