[build-system]
requires = ["jupyter_packaging==0.7.9", "jupyterlab==3.*", "setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.tbump.version]
current = "0.2.0.dev1"
regex = '''
  (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
  ((?P<channel>a|b|rc|.dev)(?P<release>\d+))?
'''

[[tool.tbump.file]]
src = "ipyflex/_version.py"
version_template = '({major}, {minor}, {patch}, "{channel}", "{release}")'

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[tool.jupyter-releaser.hooks]
before-bump-version = ["python -m pip install jupyterlab~=3.0"]
before-build-npm = ["python -m pip install jupyterlab~=3.0", "jlpm clean", "jlpm build:prod"]
