[build-system]
requires = [
  "hatchling>=1.5.0",
  "jupyterlab>=4.0.0,<5",
  "hatch-nodejs-version>=0.3.2",
]
build-backend = "hatchling.build"

[project]
name = "ipyflex"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
  "Framework :: Jupyter",
  "Framework :: Jupyter :: JupyterLab",
  "Framework :: Jupyter :: JupyterLab :: 4",
  "Framework :: Jupyter :: JupyterLab :: Extensions",
  "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = ["ipywidgets>=7.0.0,<9"]
dynamic = ["version", "description", "authors", "urls", "keywords"]


[project.optional-dependencies]
test = ["pytest", "ipykernel", "pytest-cov"]
docs = [
  'jupyter_sphinx',
  'nbsphinx',
  'nbsphinx-link',
  'pytest_check_links',
  'pypandoc',
  'recommonmark',
  'sphinx>=1.5',
  'sphinx_rtd_theme',
]

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls"]

[tool.hatch.build.targets.sdist]
artifacts = ["ipyflex/labextension"]
exclude = [".github", "binder"]

[tool.hatch.build.targets.wheel]
exclude = [".github", "binder"]

[tool.hatch.build.targets.wheel.shared-data]
"ipyflex/labextension" = "share/jupyter/labextensions/ipyflex"
"install.json" = "share/jupyter/labextensions/ipyflex/install.json"

[tool.hatch.build.hooks.version]
path = "ipyflex/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
  "ipyflex/labextension/static/style.js",
  "ipyflex/labextension/package.json",
]
skip-if-exists = ["ipyflex/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "ipyflex/labextension"


[tool.jupyter-releaser]
skip = ["check-links"]

[tool.jupyter-releaser.hooks]
before-bump-version = [
  "python -m pip install jupyterlab~=4.0 jupyter_packaging~=0.10",
]
before-build-npm = [
  "python -m pip install jupyterlab~=4.0",
  "jlpm clean",
  "jlpm build:prod",
]
