[metadata]
name = ipyflex
version         = attr: ipyflex.__version__
description     = Jupyter Widget Flex Layout
long_description = file: README.md
long_description_content_type = text/markdown
author = Le Duc Trung
author_email = leductrungxf@gmail.com
url = https://github.com/trungleduc/ipyflex,
license = BSD 3-Clause License,
license_file = LICENSE.txt
platforms = Linux, Mac OS X, Windows
keywords = Jupyter, Widgets, IPython
classifiers = 
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Jupyter

[bdist_wheel]
universal=1